--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/GEORSYMOL/Desktop/jar files/mysql-connector-java-5.1.24-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
+	<classpathentry kind="lib" path="C:/Users/GEORSYMOL/Downloads/jar_files (4)/fontawesomefx-commons-9.1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/GEORSYMOL/Downloads/jar_files (4)/fontawesomefx-fontawesome-4.7.0-9.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
